# gSlapper

./: .gitignore  404.html  BENCHMARKING.md  LICENSE  PERFORMANCE.md  PKGBUILD  PROJECT_SUMMARY.md  README.md  TO_IMPLEMENT.md  benchmark.sh  flake.nix  gslapper.install  gslapper.service  gslapper@.service  index.html  install.sh  meson.build  mkdocs.yml  nfpm.yaml  sitemap.xml  test-all-formats.sh  test-image-detection.c  test-images.sh  test-transitions-interactive.sh  test-transitions-quick.sh  test-transitions.sh  test-wallpaper-modes.sh
.github/workflows/: docs.yml  nix.yml  release.yml
advanced/: index.html
advanced/multi-monitor/: index.html
advanced/performance/: index.html
advanced/transitions/: index.html
advanced/troubleshooting/: index.html
development/api-reference/: index.html
development/architecture/: index.html
development/building/: index.html
development/contributing/: index.html
development/gstreamer-1.26.10-compatibility/: index.html
development/swww-comparison/: index.html
development/swww-restore-analysis/: index.html
development/systemd-analysis/: index.html
development/systemd-service/: index.html
docs/: README.md  VERIFICATION_IMAGE_SUPPORT.md  index.md  nix-installation.md  systemd-service-setup.md  systemd-service.md
docs-site/: HANDOVER.md  next.config.mjs  package-lock.json  package.json  source.config.ts
docs-site/app/: global.css  layout.tsx
docs-site/brand/: gslapper.txt  gsp.txt
docs-site/components/: brand.tsx  docs-home.tsx  operator-header.tsx  provider.tsx  search.tsx
docs-site/lib/: cn.ts  layout.shared.tsx  (+2 more)
getting-started/: index.html
inc/: cache.h  ipc.h  state.h
nix-installation/: index.html
overrides/: extra.css
scripts/: render_docs_brand.py
search/: search_index.json
src/: cache.c  holder.c  ipc.c  main.c  main.c.backup.before_final_fix  state.c
systemd-service/: index.html
systemd-service-setup/: index.html
tests/: test_basic.sh  test_image_formats.sh  test_memory.sh  test_signal_shutdown.sh  test_systemd.sh
user-guide/: index.html
(+84 files in other folders)
